# PlanProof_v3

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
configs/: classifier_patterns.yaml  confidence_thresholds.yaml  default.yaml  evidence_guidance.yaml
configs/ablation/: ablation_a.yaml  ablation_b.yaml  ablation_c.yaml  ablation_d.yaml  full_system.yaml  naive_baseline.yaml  strong_baseline.yaml
configs/datagen/degradation/: clean.yaml  heavy_scan.yaml  moderate_scan.yaml
configs/datagen/profiles/: complex_6file.yaml  minimal_2file.yaml  standard_3file.yaml
configs/datagen/rules/: c001_certificate_type.yaml  c002_address_consistency.yaml  c003_boundary_validation.yaml  c004_plan_change.yaml  c006_conservation_area.yaml  r001_building_height.yaml  r002_rear_garden.yaml  r003_site_coverage.yaml
configs/prompts/: boundary_scalebar.yaml  boundary_visual.yaml  certificate_extraction.yaml  drawing_extraction.yaml  form_extraction.yaml  report_extraction.yaml  spatial_structured_stage1.yaml  spatial_structured_stage2.yaml  spatial_zeroshot.yaml
configs/rules/: c001_certificate_type.yaml  c002_address_consistency.yaml  c003_boundary_validation.yaml  c004_plan_change.yaml  c005_boundary_verification.yaml  c006_conservation_area.yaml  r001_max_height.yaml  r002_rear_garden.yaml  r003_site_coverage.yaml
data/annotated/2025 00532 PA Held/: ground_truth.json
data/annotated/2025 00768 PA Held/: ground_truth.json
data/annotated/2025 00841 PA Held/: ground_truth.json
data/raw/: PROVENANCE.md
data/results/: statistics.json  threshold_sensitivity.json
docker/: Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  ENHANCEMENT_ROADMAP.md  ERROR_ANALYSIS.md  EXECUTION_STATUS.md  EXTRACTION_ERROR_ATTRIBUTION.md  GAPS_AND_IDEAS.md  IMPLEMENTATION_PLAN.md  PROJECT_LOG.md  PlanProof_Proposal.docx  RESEARCH_IDEAS.md  ROADMAP_TO_9.5.md  SABLE.md  SABLE_ALGORITHM.md  SABLE_FORMAL_PROPERTIES.md
docs/adr/: 001-pipeline-step-registry.md  002-protocols-over-abcs.md  003-assessability-three-states.md  template.md
notebooks/: ablation_analysis.ipynb  ablation_analysis_executed.ipynb
scripts/: add_notebook_cells.py  annotate_bcc.py  anonymise_bcc_data.py  auto_annotate_bcc.py  compute_statistics.py  generate_extraction_figures.py  generate_sable_figures.py  run_ablation.py  run_extraction_ablation.py  run_extraction_eval.py  run_robustness.py  run_threshold_sensitivity.py  verify_dataset.py
src/planproof/: __init__.py  bootstrap.py
tests/: conftest.py
tests/integration/: test_ablation_configs.py  test_datagen_coverage.py  test_datagen_pipeline.py  test_e2e_pipeline.py  test_graph_population.py  test_ingestion_pipeline.py  test_neo4j_connectivity.py  test_output_pipeline.py  test_reasoning_pipeline.py  test_vlm_extraction_step.py
tests/unit/: test_anonymise.py
(+679 files in other folders)
