[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planproof"
version = "0.1.0"
description = "Assessability-aware multimodal planning compliance validation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings",
    "structlog",
    "neo4j",
    "openai",
    "pyyaml",
    "requests",
    "groq",
    "reportlab",
    "Pillow",
    "numpy",
    "pdfplumber",
]

[project.optional-dependencies]
geo = [
    "shapely>=2.0",
]
pdf = [
    "pymupdf",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-requests",
]
eval = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.10",
    "jupyter>=1.0",
    "notebook>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/planproof"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.report]
fail_under = 70
